Add swagger doc
